crates/swc_ecma_parser/tests/pat/errors/rest-trailing-comma/class_method_and_constructor.js
class c {
  constructor(...a,){}
  fn(...a,) {}
}
